# nofucksgiven

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.codex/: config.toml  hooks.json
.codex/hooks/: continuity.py  post_edit_review.py  prompt_guard.py  stop_summary.py
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: pages.yml
benchmarks/: __init__.py  bench_aead.py  bench_leaderboard.py  bench_nfg.py
data/: security_leaderboard.json
docs/: codex-workflow.md  commands.md  contributing.md  development-map.md  experiment-log.md  index.md  leaderboard.md  license.md  local-benchmarks.md  reading-list.md  repo-map.md  roadmap.md  safety-notes.md  security.md  threat-model.md
docs/stylesheets/: extra.css
experiments/: README.md
experiments/nfg/: README.md  __init__.py  attacks.md  cipher.py  corpus.json  datasets.py  evaluation.py  v1.py  vectors.json
scripts/: check_claims.py  check_internal_links.py  install-hooks.sh  render_leaderboard.py
src/nofucksgiven/: __init__.py  baselines.py  leaderboard.py
tests/: test_baselines.py  test_benchmarks.py  test_checks.py  test_leaderboard.py  test_nfg_evaluation.py  test_nfg_experiment.py  test_nfg_v1_experiment.py
