[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nofucksgiven"
version = "0.1.0"
description = "Research scaffold for symmetric encryption experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6",
    "pytest>=8",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
